--- a/frontend/drivehub/src/index.css
+++ b/frontend/drivehub/src/index.css
@@ -8,12 +8,18 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #452e61;
+
+  max-width: 100vw;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+html{
+  scrollbar-gutter: stable;
 }
 
 a {
