--- a/frontend/drivehub/src/index.css
+++ b/frontend/drivehub/src/index.css
@@ -8,7 +8,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #452e61;
+  background-color: #957db3;
 
   max-width: 100vw;
 
