--- a/frontend/drivehub/src/index.css
+++ b/frontend/drivehub/src/index.css
@@ -8,7 +8,8 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #957db3;
+  /* background-color: #957db3; */
+  background-color: #f0f0f0;
 
   max-width: 100vw;
 
@@ -22,22 +23,24 @@ html{
   scrollbar-gutter: stable;
 }
 
-a {
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
-}
+}*/
 a:hover {
-  color: #535bf2;
-}
+  color: #5158da;
+} 
 
 body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+  color: black;
+  font-size: 16px;
 }
 
-button {
+/* button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -50,12 +53,12 @@ button {
 }
 button:hover {
   border-color: #646cff;
-}
+} */
 /* button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 } */
-
+/* 
 @media (prefers-color-scheme: light) {
   :root {
     color: #ffffff;
@@ -63,6 +66,6 @@ button:focus-visible {
   a:hover {
     color: #747bff;
   }
-}
+} */
 
 
