--- a/frontend/drivehub/src/index.css
+++ b/frontend/drivehub/src/index.css
@@ -21,6 +21,8 @@
 html{
   scrollbar-gutter: stable;
   scroll-behavior: smooth;
+  overflow-y: scroll; 
+  overscroll-behavior-y: none;
 }
 
 /* a {
