--- a/frontend/drivehub/src/index.css
+++ b/frontend/drivehub/src/index.css
@@ -19,6 +19,7 @@
 }
 
 html{
+  box-sizing: border-box;
   scrollbar-gutter: stable;
   scroll-behavior: smooth;
   overflow-y: scroll; 
@@ -30,13 +31,9 @@ html{
   color: #646cff;
   text-decoration: inherit;
 }*/
-a:hover {
-  color: #5158da;
-} 
 
 body {
   margin: 0;
-  min-width: 320px;
   min-height: 100vh;
   color: black;
   font-size: 16px;
